--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,9 +3,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.pharmacie">
 
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false" />
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
+
 
     <application
     android:networkSecurityConfig="@xml/network_security_config"
@@ -18,53 +26,80 @@
     android:supportsRtl="true"
     android:theme="@style/Theme.Pharmacie"
     tools:targetApi="31">
-
-    <activity
-        android:name=".LoginActivity"
-        android:exported="true"
-        android:theme="@style/Theme.Pharmacie.Splash"
-        android:screenOrientation="portrait"
-        android:windowSoftInputMode="adjustResize|stateHidden">
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
-    </activity>
-
-
-    <activity
-        android:name=".SignupActivity"
-        android:exported="false"
-        android:theme="@style/Theme.Pharmacie"
-        android:parentActivityName=".LoginActivity">
-        <meta-data
-            android:name="android.support.PARENT_ACTIVITY"
-            android:value=".LoginActivity" />
-    </activity>
-
-    <activity
-        android:name=".DashboardActivity"
-        android:exported="false"
-        android:theme="@style/Theme.Pharmacie.NoActionBar"
-        android:launchMode="singleTop"
-        android:parentActivityName=".LoginActivity">
-        <meta-data
-            android:name="android.support.PARENT_ACTIVITY"
-            android:value=".LoginActivity" />
-    </activity>
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="${applicationId}.provider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths"/>
+        </provider>
+        <activity
+            android:name=".LoginActivity"
+            android:exported="true"
+            android:theme="@style/Theme.Pharmacie.Splash"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustResize|stateHidden">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
 
 
-    <activity
-        android:name=".dashboard"
-        android:exported="false"
-        android:theme="@style/Theme.Pharmacie.NoActionBar"
-        android:parentActivityName=".DashboardActivity">
-        <meta-data
-            android:name="android.support.PARENT_ACTIVITY"
-            android:value=".DashboardActivity" />
-    </activity>
+        <activity
+            android:name=".SignupActivity"
+            android:exported="false"
+            android:theme="@style/Theme.Pharmacie"
+            android:parentActivityName=".LoginActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".LoginActivity" />
+        </activity>
+        <activity
+            android:name=".MainActivity"
+            android:exported="false"
+            android:theme="@style/Theme.Pharmacie.NoActionBar"
+            android:launchMode="singleTop"
+            android:parentActivityName=".LoginActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".LoginActivity" />
+        </activity>
+        <activity
+            android:name=".AddEditMedicamentActivity"
+            android:exported="false"
+            android:theme="@style/Theme.Pharmacie.NoActionBar"
+            android:launchMode="singleTop"
+            android:parentActivityName=".MedicamentListActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MedicamentListActivity" />
+        </activity>
+
+        <activity
+            android:name=".MedicamentListActivity"
+            android:exported="false"
+            android:theme="@style/Theme.Pharmacie.NoActionBar"
+            />
 
 
+        <activity
+            android:name=".DashboardActivity"
+            android:exported="false"
+            android:theme="@style/Theme.Pharmacie.NoActionBar"
+          />
 
-</application>
+        <activity
+            android:name=".MedicamentDetailActivity"
+            android:exported="false"
+            android:theme="@style/Theme.Pharmacie"/>
+        <activity
+            android:name=".NotificationActivity"
+            android:label="Notifications"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
+
+
+    </application>
     </manifest>
